test/link/script-different-bank.out
error: The linker script places section "ROM1" in ROMX bank 2, but it was already defined in bank 1
    at script-different-bank.link(2)
Linking failed with 1 error
