test/link/script-different-bank.link
romx 2
	"ROM1"
